# ComfyUI-Qwen-TTS

./: QwenTTS.py  README.md  __init__.py  config.json  pyproject.toml  requirements.txt
